--- a/brett/ex1/CMakeLists.txt
+++ b/brett/ex1/CMakeLists.txt
@@ -5,7 +5,7 @@ project (ex1)
 # figure out how to do to something more portable here regarding c++11
 SET(CMAKE_CXX_FLAGS "-std=c++11")
 
-add_library (ex1lib ex1lib.cc)
+add_library (ex1lib ex1maputil.cc ex1lib.cc)
 
 add_executable (get_low_frequency_words get_low_frequency_words.cc)
 target_link_libraries(get_low_frequency_words ex1lib)
